[package]
name = "eighty"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Static website generator, mainly for the Core Paper project."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
rayon = "1.5"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
handlebars = { version = "6.4", features = ["dir_source"] }
notify = "4.0"
regex = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"